Fix output stretch bug

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -34,6 +34,7 @@ html {
         background-color: map.get($map, 'clr_bg_main');
 
         .calculator {
+            width: 17rem;
             display: flex;
             flex-flow: column wrap;
 
@@ -95,7 +96,7 @@ html {
             }
 
             output#result {
-                // max-width is set by js on resize event of window
+                max-width: 100%;
                 margin: 0.75rem 0;
                 padding: 1em 0.5em calc(1em - 10px);
                 border-radius: $border-radius;
